--- a/tabelas-listas-frames-formularios/tabelas/style.css
+++ b/tabelas-listas-frames-formularios/tabelas/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "inter", sans-serif;
+}
 
 body{
     width: 100%;
@@ -12,12 +20,18 @@ body{
     width: 70%;
     height: 70vh;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .primeirobi{
     display: flex;
+    width: 50%;
+    height: 50%;
 }
 
 .segundobi{
     display: flex;
+    width: 50%;
+    height: 50%;
 }
