--- a/tabelas-listas-frames-formularios/formulario/style.css
+++ b/tabelas-listas-frames-formularios/formulario/style.css
@@ -20,3 +20,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.lista{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
